Fix rendered sublist spacing
Along with a recent change to how spaces are output by the
writeas/saturday library, this alters the CSS to make sublists display
correctly, and fixes #27.

--- a/less/core.less
+++ b/less/core.less
@@ -55,18 +55,18 @@ body {
 			}
 			hr + p, ol, ul {
 				display: block;
-				margin-top: -1em;
-				margin-bottom: -1em;
+				margin-top: -1rem;
+				margin-bottom: -1rem;
 			}
 			ol, ul {
-				margin: 0.75em 0 -1em;
-			}
-			ul {
-				padding: 0 0 0 2em;
+				margin: 2rem 0 -1rem;
+				ol, ul {
+					margin: 1.25rem 0 -0.5rem;
+				}
 			}
 			li {
-				margin-top: -0.5em;
-				margin-bottom: -0.5em;
+				margin-top: -0.5rem;
+				margin-bottom: -0.5rem;
 			}
 			h2#title {
 				.article-title;
